# CppTutorials

Chapter2/: CMakeLists.txt
Chapter2/src/: main.cpp
Example_MSVC/: CMakeLists.txt  CMakePresets.json
Example_MSVC/include/: log.hpp
Example_MSVC/src/: 02_initializer.cpp  main.cpp
Sample/: CMakePresets.json
